# futura_alpha_icp

./: .gitignore  .gitmodules  BRANCH_CHANGES.md  Cargo.toml  README.md  canister_ids.json  debug_memory.sh  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.toml  test-image-processing.html  test_simple_memory.mjs  tsconfig.json
.github/workflows/: did-drift-detection.yml
docs/: HashMap-vs-StableBTreeMap.md  README.md  ai-chatbot-ai-folder-analysis.md  ai-chatbot-analysis.md  ai-chatbot-import-guide-completed.md  ai-chatbot-import-guide-phase3.md  ai-chatbot-import-guide.md  ai-chatbot-schema-analysis.md  backend-frontend-types-reference.md  canister-factory-comparison.md  decoupled-vs-pre_decoupled-memories.rs.md  folder-structure-implementation-todo.md  folder-upload-flow-analysis.md  memory-creation-api-design.md  memory-deletion-api-design.md  memory-structure-comparison-icp-web2.md  storage-provider-failure-issue.md  testing-strategy-icp.md  upload-implementation-todo.md  uploadthing-alternatives.md  uploadthing-large-files-localhost.md  uploadthing-questions.md  uploadthings.md  vercel-blob-architecture.md  vercel-blob-context.md  vercel-blob-grant-implementation-todo.md  vercel-blob-usage.md
docs/analysis/: backend-returning-types-analysis.md  certificate-verification-solution-summary.md  content-card-component-analysis.md  email-integration-comparison.md  frontend-s3-chunk-sizes-analysis.md  icp-s3-memory-creation-flow-analysis.md  icp-upload-flow-analysis.md  internet-identity-direct-signin-flow.md  internet-identity-playwright-plugin-analysis.md  internet-identity-signin-flow-analysis.md  (+2 more)
docs/api/: README.md  (+1 more)
issues/: canister-factory-pattern-in-juno.md  formdata-double-parsing-bug.md  migrate-users-to-capsule-architecture.md  small-file-multi-asset-support.md  vercel-blob-grant-content-length-error.md  vercel-blob-onuploadcompleted-localhost-issue.md
lab/: README.md
scripts/: README-audit-db-constraints.md  audit-db-constraints.md  audit-db-constraints.sh  build-lab_frontend.sh  check-did-drift.sh  ci-scan-storage-regression.sh  deploy-backend-ic-first.sh  deploy-backend-ic-update.sh  deploy-backend-ic.sh  deploy-lab_backend-local.sh  deploy-lab_backend-main.sh  deploy-local-new-commented-out.sh  deploy-local-new.sh  deploy-local-simple.sh  deploy-local.sh  deploy.sh  fix-declarations.cjs  pre-commit-did-check.sh  toggle-neon-workflow.sh
src/backend/: Cargo.toml  backend.did  run_backend_unit_tests.sh
src/backend/proptest-regressions/capsule_store/: integration_tests.txt
src/backend/scripts/: README.md  deploy.sh  register_user.sh  test-migration-features.sh
src/backend/scripts/capsule/: test_capsule_creation.sh
src/backend/scripts/galleries/: test_gallery_crud.sh  test_gallery_upload.sh
src/backend/scripts/memories/: test_add_memory.sh  test_delete_memory.sh  test_get_memory.sh  test_list_memories.sh  test_memory_crud.sh  test_memory_upload.sh  test_update_memory.sh
src/backend/scripts/test-migration/data/: mock-capsule-data.json
src/backend/scripts/test-migration/utils/: test-utils.sh
src/backend/src/: admin.rs  auth.rs  canister_factory.rs  canister_factory_old.rs  capsule.rs  capsule_acl.rs  capsule_migration_guide.md  capsule_store.rs  capsule_store_usage_guide.md  folder.rs  gallery.rs  http.rs  lib.rs  memories.rs  memories_core.rs  memory.rs  memory_manager.rs  metadata.rs  person.rs  session.rs  state.rs  test_utils.rs  types.rs  types.rs.backup  unified_types.rs  upload.rs  user.rs  users.rs  utils.rs
src/backend/src/canister_factory/: auth.rs  cycles.rs  export.rs  factory.rs  import.rs  integration_tests.rs  mod.rs  orchestrator.rs  registry.rs  types.rs  verify.rs
src/backend/src/canister_factory/integration_tests/: cycles_tests.rs  import_session_tests.rs  mod.rs  orchestration_tests.rs  registry_tests.rs  test_utils.rs
src/backend/src/capsule/: api_types.rs  commands.rs  domain.rs  query.rs  time.rs  util.rs
src/backend/src/capsule_store/: hash.rs  integration_tests.rs  mod.rs  stable.rs  store.rs  types.rs
src/backend/src/folder/: api_types.rs  commands.rs  domain.rs  query.rs
src/backend/src/gallery/: api_types.rs  commands.rs  domain.rs  query.rs  util.rs
src/backend/src/http/: auth.rs  request.rs  response.rs  secret.rs  streaming.rs
src/backend/src/http/adapters/: acl.rs  asset_store.rs  canister_env.rs  secret_store.rs
src/backend/src/http/core/: auth_core.rs  path_core.rs  types.rs
src/backend/src/http/routes/: assets.rs  health.rs
src/backend/src/http/services/: token_service.rs
src/backend/src/memories/: adapters.rs  core.rs  core.rs.backup  types.rs  utils.rs
src/backend/src/memories/core/: assets.rs  create.rs  delete.rs  model_helpers.rs  read.rs  traits.rs  update.rs
src/backend/src/session/: adapter.rs  compat.rs  core.rs.backup  service.rs  types.rs
src/backend/src/upload/: blob_store.rs  service.rs  sessions.rs  tests.rs  types.rs  types.rs.backup
src/backend/src/upload/tests/: test_integration.rs  test_unit.rs
src/backend/src/util/: mod.rs
src/backend/src/utils/: blob_id.rs  name_conversion.rs  uuid_v7.rs
src/backend/tests/: hello_world_pocket_ic.rs  memories_pocket_ic.rs  simple_pocket_ic.rs
src/canister_factory/: Cargo.toml  README.md  dfx.json
src/canister_factory/src/: lib.rs
src/lab_backend/: Cargo.toml  lab_backend.did
src/lab_backend/docs/: README.md
src/lab_backend/src/: greet.rs  lib.rs  llm_chatbot.rs
src/lab_backend/src/llm_chatbot/: chat.rs  dfinity_llm_lib.rs.md  icp_ninja_lib.rs.md
tests/: README.md  capsule_store_integration.rs
tests/pocket-ic/: Cargo.toml  README.md  hello_world_pocket_ic.rs  http_integration_tests.rs  memories_pocket_ic.rs  run_all_pocket_ic_tests.sh  run_pocket_ic_tests.sh  run_unit_tests.sh  run_working_tests.sh  simple_memory_test.rs
(+819 files in other folders)
