[workspace]
members = [
    "src/backend",
    "src/canister_factory",
    "src/lab_backend",
    "lab/service_lifetimes_stateless",
    "lab/service_lifetimes_threadlocal",
    "lab/ic_upload_minimal",
    "tests/pocket-ic",
]
resolver = "2"

# Only build prod by default (so CI / local `cargo build` stays clean & fast)
default-members = [
    "src/backend",
    "src/canister_factory"
]
