[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["migration", "upload"]
migration = []
personal_canister_creation = []
upload = []

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Removed uuid dependency to avoid WASM compatibility issues
# getrandom = { version = "0.2", features = ["custom"] }
# uuid = { version = "1", features = ["v5", "v7", "serde", "rng-getrandom"] }

ic-http-certification = "3.0.3"
http = "1.0"
ic-stable-structures = "0.6"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bitflags = { version = "2.4", features = ["serde"] }
hmac = "0.12"
once_cell = "1.19"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockall = "0.12"
proptest = "1.0"
pocket-ic = "10.0"
anyhow = "1.0"
