[package]
name = "canister_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
