[package]
name = "lab_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12"         # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6"   # KV baseline for later
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
