[package]
name = "http-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_integration_tests"
path = "http_integration_tests.rs"

[[bin]]
name = "hello_world_pocket_ic"
path = "hello_world_pocket_ic.rs"

[[bin]]
name = "memories_pocket_ic"
path = "memories_pocket_ic.rs"

[[bin]]
name = "simple_memory_test"
path = "simple_memory_test.rs"

[[bin]]
name = "simple_pocket_ic"
path = "simple_pocket_ic.rs"

[dependencies]
pocket-ic = "10.0"
candid = "0.10.0"
ic-cdk = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
backend = { path = "../../src/backend" }
